--- a/style.css
+++ b/style.css
@@ -172,6 +172,31 @@ main h2 {
   z-index: 5;
 }
 
+#employee-table th:nth-child(3),
+#employee-table td:nth-child(3) {
+  text-align: center;
+}
+#employee-table th:nth-child(4),
+#employee-table td:nth-child(4) {
+  text-align: center;
+}
+#employee-table th:nth-child(6),
+#employee-table td:nth-child(6) {
+  text-align: center;
+}
+#employee-table th:nth-child(7),
+#employee-table td:nth-child(7) {
+  text-align: center;
+}
+#employee-table th:nth-child(8),
+#employee-table td:nth-child(8) {
+  text-align: right;
+}
+#employee-table th:nth-child(9),
+#employee-table td:nth-child(9) {
+  text-align: center;
+}
+
 /* Header freeze – sedikit lebih tinggi dan beda warna */
 #employee-table th.freeze-col {
   background-color: #f2f2f2;
@@ -532,3 +557,4 @@ footer {
 .chartjs-legend li {
   align-items: center !important;
 }
+
